--- a/www/kiosk.html
+++ b/www/kiosk.html
@@ -27,7 +27,7 @@
           <button type="button" class="btn btn-default btn-lg">
             {{ brumulus_values.current_temp }}
           </button>
-          <button type="button" class="btn btn-default btn-lg">
+          <button type="button" class="btn btn-default btn-sm">
             {{ brumulus_values.temp_delta }}
           </button>
         </div>
